<?xml version="1.0" encoding="utf-8" ?>   
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">  
  <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnOriginal" android:text="@string/originalbtn" /> 
  <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnJAVA" android:text="@string/javabutton" />   
  <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnNDK" android:text="@string/ndkbutton" />     
  <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnGaussianJAVA" android:text="@string/javagaussianbutton" />   
  <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnGaussianNDK" android:text="@string/ndkgaussianbutton" />     
  <ImageView android:id="@+id/ImageView01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/desc"/>   
  </LinearLayout>